Add account charge api
