# swagger/v1/swagger.yaml
@@ -35,7 +35,7 @@ paths:
             schema:
               type: object
               properties:
-                currency:
+                currency_id:
                   type: number
               required:
               - currency_id
@@ -62,6 +62,33 @@ paths:
       responses:
         '200':
           description: successful
+        '404':
+          description: Not found
+  "/api/v1/accounts/{id}/charge":
+    parameters:
+    - name: id
+      in: path
+      required: true
+      schema:
+        type: number
+    - name: params
+      in: body
+      schema:
+        type: object
+        properties:
+          value:
+            type: number
+        required:
+        - value
+    patch:
+      summary: charge
+      security:
+      - api_key: []
+      responses:
+        '200':
+          description: successful
+        '422':
+          description: Invalid request
         '404':
           description: Not found
   "/api/v1/admin/currencies":
